# tilox.hs

./: CHANGELOG.md  README.md  tilox-hs.cabal
app/: Main.hs  NaiveEval.hs  Parser.hs  Scanner.hs
examples/: scoping.lox  short-circuit.lox  stop-return.lox
lib/: AST.hs  NaiveEval.hs  PList.hs  Parser.hs  Scanner.hs
test/: ParserTest.hs  ScannerTest.hs  Test.hs
