cabal-version:      3.0
name:               tilox-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A toy toy interpreter for LOX in Haskell 

-- A longer description of the package.
description: A Haskell re-implementation of the LOX programming language in the craftinginterpreters book, containing the scanner, parser, interpreter, and compiler for the LOX.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             hehelego
maintainer:         hahalegao@gmail.com

-- A copyright notice.
-- copyright:
category: Compilers/Interpreters
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Scanner Parser NaiveEval
    build-depends:    base >= 4 && < 5
    hs-source-dirs:   lib
    default-language: Haskell2010

executable tilox-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4 && < 5, tilox-hs
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    other-modules:    ScannerTest, ParserTest
    build-depends:    base >= 4 && < 5, tilox-hs, hspec >= 2.11
    hs-source-dirs:   test
    default-language: Haskell2010
